调整轮播图样式

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -4,7 +4,7 @@
     width: 100%;
     position: relative;
   }
-  width: 10rem;
+ // width: 10rem;
   position: relative;
   .bottom-placeholder {
     width: 10rem;
