--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -3,11 +3,14 @@
   background: #f4f4f4;
   .swiper-container {
     width: 100%;
-    height: 3.2rem;
+    height: 4.3rem;
     box-sizing: border-box;
     .am-wingblank.am-wingblank-lg {
       margin: 0 0;
     }
+  }
+  .slider {
+    touch-action: none;
   }
 
   .icon-nav {
@@ -29,7 +32,7 @@
       font-size: 0.4rem;
       color: #333;
       line-height: 0.56rem;
-      &::before{
+      &::before {
         content: "";
         display: block;
         width: 1.2rem;
