--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -1,3 +1,8 @@
+$blue: #297cd5;
+$txt-gray: #888888;
+$txt-black: #333333;
+$txt-red: #fd6c5;
+
 .home-container {
   width: 100%;
   background: #f4f4f4;
@@ -12,6 +17,16 @@
   .slider {
     touch-action: none;
   }
+  .slider-slide {
+    .btn {
+      position: absolute;
+      z-index: 10;
+      bottom: 0.66rem;
+      width: 2.612rem;
+      left: 50%;
+      margin-left: -1.306rem;
+    }
+  }
 
   .icon-nav {
     width: 100%;
@@ -20,7 +35,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 0.1333rem;
+    margin-bottom: 0.266rem;
     background: #fff;
     span {
       width: 1.68rem;
@@ -68,35 +83,28 @@
   .free-course {
     // height: 13.3333rem;
     background: #fff;
-    margin-bottom: 0.1333rem;
+    margin-bottom: 0.2666rem;
     .free-course-header {
-      height: 1.3333rem;
-      border-bottom: 1px solid #E6E6E6;
+      height: 1.5rem;
+      //   border-bottom: 1px solid #E6E6E6;
       h1 {
-        height: 1.3333rem;
-        line-height: 1.3333rem;
-        font-size: 0.4533rem;
+        height: 1.5rem;
+        line-height: 1.5rem;
+        font-size: 0.48rem;
         float: left;
         margin: 0 0 0 0.4rem;
-        &::before {
-          content: "|";
-          margin-right: 0.1067rem;
-          margin-top: 0.14rem;
-          color: #297cd5;
-          font-weight: 700;
-        }
       }
       .more {
         float: right;
-        width: 1.6rem;
-        height: 1.3333rem;
-        line-height: 1.3333rem;
-        font-size: 0.4rem;
-        color: #999;
+        margin-right: 0.4rem;
+        height: 1.5rem;
+        line-height: 1.5rem;
+        font-size: 0.32rem;
+        color: $txt-gray;
         &::after {
           content: '>';
-          font-size: .5rem;
-          margin-left: 0.1333rem;
+          font-size: .4rem;
+          margin-left: 0.1rem;
         }
       }
     }
@@ -104,10 +112,9 @@
       width: 100%;
       height: auto;
       .course-item {
-        // width: 100%;
-        // height: 3.04rem;
-        // box-sizing: content-box;
-        // padding: 0.4rem 0 0.4rem 0.4rem;
+        box-sizing: border-box;
+        padding: 0 .4rem 0.5333rem .4rem;
+
         .course-cover-img {
           width: 3.52rem;
           height: 2.24rem;
@@ -121,7 +128,17 @@
       }
     }
   }
-
+  .limit-discount {
+    background: #fff;
+    margin-bottom: 0.2666rem;
+    .title{
+      text-align: center;
+      padding: .4533rem 0 .3466rem 0;
+      img{
+        height: 0.8rem;
+      }
+    }
+  }
   .team-of-experts {
     width: 100%;
     background: #fff;
