--- a/src/components/TeamOfExperts2/index.scss
+++ b/src/components/TeamOfExperts2/index.scss
@@ -1,9 +1,10 @@
 .team-of-experts-comp2 {
 
   padding-top: .5rem;
-  padding-bottom: 0;
   padding-left: .36rem;
   padding-right: .36rem;
+  padding-bottom: .5333rem;
+  overflow: auto;
   .swiper-wrapper {
     height: 2.6134rem;
   }
