页面购买按钮修复

--- a/src/pages/introduce/program/index.scss
+++ b/src/pages/introduce/program/index.scss
@@ -237,6 +237,7 @@
                 border-right: 1.5px solid $blue;
                 content: " ";
                 border-radius: 8px;
+                margin-top: -1px;
               }
             }
           }
