--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -252,6 +252,7 @@ $txt-red: #fd6c58;
                 border: 1px solid $blue;
                 content: " ";
                 border-radius: 8px;
+                margin-top: -1px;
               }
             }
           }
