页面文案，限时优惠接口

--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -273,7 +273,7 @@ $txt-red: #fd6c58;
   .team-of-experts {
     width: 100%;
     background: #fff;
-    padding-bottom: .533rem;
+  //  padding-bottom: .533rem;
     .team-of-experts-header {
       color: $txt-black;
       padding-top: .48rem;
