限时优惠接口,缺少订单详情页链接

--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -153,6 +153,9 @@ $txt-red: #fd6c58;
           padding: .2666rem .2666rem .32rem;
           color: #ffffff;
           width: 100%;
+          background-size: cover;
+          background-repeat: no-repeat;
+          position: relative;
           .name {
             font-size: .38rem;
             line-height: .46rem;
@@ -178,7 +181,9 @@ $txt-red: #fd6c58;
             width: 4rem;
           }
           .last {
-            margin-top: 0.2rem;
+            position: absolute;
+            left: .2666rem ;
+            bottom: .2rem;
             span {
               display: inline-block;
               position: relative;
@@ -255,16 +260,6 @@ $txt-red: #fd6c58;
                 margin-top: -1px;
               }
             }
-          }
-        }
-        &.brown {
-          .head {
-            background: url("../../../assets/images/home/img_limit_discount1.png") no-repeat;
-          }
-        }
-        &.blue {
-          .head {
-            background: url("../../../assets/images/home/img_limit_discount2.png") no-repeat;
           }
         }
       }
